[gd_scene load_steps=5 format=2]

[ext_resource path="res://Prefabs/Egg.gd" type="Script" id=1]
[ext_resource path="res://Graphics/LD48-eggs.png" type="Texture" id=2]
[ext_resource path="res://Graphics/whiteDot.png" type="Texture" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 1.5

[node name="Egg" type="Node2D"]
scale = Vector2( 4, 4 )
script = ExtResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( -0.5, -0.5 )

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( -0.5, -0.5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="shell" type="Sprite" parent="Sprite"]
visible = false
self_modulate = Color( 0, 0, 0, 1 )
texture = ExtResource( 3 )
centered = false

[node name="shell2" type="Sprite" parent="Sprite"]
visible = false
self_modulate = Color( 0, 0, 0, 1 )
position = Vector2( -2, 0 )
texture = ExtResource( 3 )
centered = false
[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
